<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black">



    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/foodhub_logo"
        android:src="@drawable/foodhub_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Email cím mező -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="email"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#FFFFFF"
        android:textColorHint="#555555"
        android:backgroundTint="#FFFFFF"/>

    <!-- Jelszó mező -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#FFFFFF"
        android:textColorHint="#555555"
        android:backgroundTint="#FFFFFF"
        />

    <!-- Bejelentkezés gomb -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="login"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#000"
        android:backgroundTint="#FFA500"
        android:textSize="20sp"/>

    <!-- Regisztráció gomb -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:onClick="toRegister"
        android:text="@string/register_button"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#000"
        android:backgroundTint="#FFA500"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>