<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <!-- Felső sáv -->
    <!-- Logó -->
    <!-- FELSŐ SÁV -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222222"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recipeRecyclerView">


        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/foodhub_logo"
            android:contentDescription="@string/foodhub_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp" />

        <ImageButton
            android:id="@+id/profileIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile_logo"
            android:contentDescription="@string/profil"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logoutButton"
            android:layout_margin="8dp"
            android:onClick="toProfile"/>

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logout_button"
            android:contentDescription="@string/kijelentkez_s"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            android:onClick="logout"/>

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/search"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#888888"
            android:backgroundTint="#FFFFFF"
            android:padding="10dp"
            android:drawableStart="@android:drawable/ic_menu_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/logoImageView"
            app:layout_constraintEnd_toStartOf="@id/profileIcon"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Recept lista -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Lebegő + gomb -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/new_recipe"
        android:backgroundTint="#FFA500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:onClick="toAddRecipe"/>

</androidx.constraintlayout.widget.ConstraintLayout>